--- a/index.html
+++ b/index.html
@@ -21,16 +21,8 @@
 </div>
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
-  </div>
-</header>
-
-<!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-<img class="w3-image" src="https://www.w3schools.com/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
+<img class="w3-image" src="/logo.jpg" alt="DhanaVRIKSHA" width="1500" height="800">
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-xlarge">Stop wasting valuable time with projects that just isn't you.</span><br><br>
     <span class="w3-large w3-hide-small">Start something that matters and lets grow together</span>
@@ -176,4 +168,3 @@
 
 </body>
 </html>
-
