--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <!-- Header -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-<img class="w3-image" src="/logo.jpg" alt="DhanaVRIKSHA" width="1500" height="800">
+<img class="w3-image" src="https://dhanavriksha.github.io/Site/Logo.jpg" alt="DhanaVRIKSHA" width="1500" height="800">
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-xlarge">Stop wasting valuable time with projects that just isn't you.</span><br><br>
     <span class="w3-large w3-hide-small">Start something that matters and lets grow together</span>
