--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+
 <body>
 
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>Dhana</b> VRIKSHA</a>
+    <a href="#home" class="w3-bar-item w3-button" style="color:DarkGreen;"><b>Dhana</b> VRIKSHA</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#solutions" class="w3-bar-item w3-button">Solutions</a>
@@ -21,12 +29,16 @@
 </div>
 
 <!-- Header -->
-<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-<img class="w3-image" src="https://dhanavriksha.github.io/Site/Logo.jpg" alt="DhanaVRIKSHA" width="1500" height="800">
-  <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-xlarge">Stop wasting valuable time with projects that just isn't you.</span><br><br>
-    <span class="w3-large w3-hide-small">Start something that matters and lets grow together</span>
-    <p><a href="#solutions" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Begin</a></p>
+<header class="bgimg-1 w3-display-container " id="home">
+<img class="w3-image center" src="https://dhanavriksha.github.io/Site/Logo.jpg" alt="DhanaVRIKSHA" width="1200" height="700">
+  <div class="w3-display-left w3-text-white w3-center" style="padding:64px">
+    <!-- <span class="w3-xlarge">Stop wasting valuable time with projects that just isn't you.</span><br> -->
+    <br><br><br><br>    <br><br><br><br>     <br><br><br><br>     <br><br><br><br>    <br><br><br><br> <br><br>
+    <span class="w3-large w3-hide-small w3-padding-large">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                          Start something that matters now and lets grow together!</span>
+    <p><a href="#solutions" class="w3-button w3-white w3-padding-8 w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Begin</a></p>
   </div> 
 </header>
 
@@ -37,33 +49,33 @@
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="solutions">
 
 <div class="w3-third">
-<h2>Vision</h2>
-      <p>Provide investors near real time information to make best investment decisions. <br> <br> <br>Goal of DhaNaVrikShA, is to simplify your decision-making process using state of art artificial intelligence data recommendations and complement the existing fundamental / technical analyses.</p>
+<h2 style="color:DarkOrchid;">Vision</h2>
+      <p style="color:DarkGrey;">Provide investors near real time information to make best investment decisions. <br> <br> <br>Goal of DhaNaVrikShA, is to simplify your decision-making process using state of art artificial intelligence data recommendations and complement the existing fundamental / technical analyses.</p>
 </div>
 
 <div class="w3-third">
-<div class="w3-card w3-white">
+<div class="w3-card w3-white" >
 
   <div class="w3-container">
-  <h3>Portfolio Reco </h3>
-  <h4>Stocks</h4>
-  <p>Maximize returns </p>
-  <p>Personalized recommendations</p>
-  <p>Smart Notifications</p>
-  <p>Near Real-time</p>
+  <h3 style="color:YellowGreen;">Portfolio Reco </h3>
+  <h4 style="color:DarkGrey;">Stocks</h4>
+  <p style="color:DarkGrey;">Maximize returns </p>
+  <p style="color:DarkGrey;">Personalized recommendations</p>
+  <p style="color:DarkGrey;">Smart Notifications</p>
+  <p style="color:DarkGrey;">Near Real-time</p>
   </div>
   </div>
 </div>
 
 <div class="w3-third">
 <div class="w3-card w3-white">
-  <div class="w3-container">
-  <h3>Forex Maximizer</h3>
-  <h4>Currency</h4>
-  <p>Go Global</p>
-  <p>Minimize macro economic shocks</p>
-  <p>Smart Notifications</p>
-  <p>Near Real-time</p>
+  <div class="w3-container" >
+  <h3 style="color:DarkCyan;">Forex Maximizer</h3>
+  <h4 style="color:DarkGrey;">Currency</h4>
+  <p style="color:DarkGrey;">Go Global</p>
+  <p style="color:DarkGrey;">Minimize macro economic shocks</p>
+  <p style="color:DarkGrey;">Smart Notifications</p>
+  <p style="color:DarkGrey;">Near Real-time</p>
   </div>
 </div>
 
@@ -73,6 +85,7 @@
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
+<br><br><br>
 <h2>OUR TEAM</h2>
 <div class="w3-row"><br>
 
@@ -121,12 +134,12 @@
 <div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
   <div class="w3-row">
     <div class="w3-col m5">
-    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
-      <h3>Address</h3>
-      <p>DhanaVriksha</p>
+    <div class="w3-padding-16"><span class="w3-xlarge w3-border-green w3-bottombar">Contact Us</span></div>
       <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>Opening Soon!</p>
-      <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Bangalore, INDIA</p>
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  dhanavriksha@gmail.com</p>
+      <h3 style="color:DarkGrey;">Address</h3>
+      <p style="color:DarkGrey;">DhanaVriksha</p>
+      <p style="color:DarkGrey;"><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Bangalore, INDIA</p>
+      <p style="color:DarkGrey;"><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  dhanavriksha@outlook.com</p>
     </div>
     <div class="w3-col m7">
       <form class="w3-container w3-card-4 w3-padding-16 w3-white" action="/action_page.php" target="_blank">
@@ -150,21 +163,13 @@
   </div>
 </div>
 
+</body>
 
 <!-- Footer -->
-<footer class="w3-center w3-lime w3-padding-64">
+<footer class="w3-center w3-blue w3-padding-16">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a> <br><br><br><br>
   <a href="https://calendar.google.com/calendar/u/0?cid=YmFsYXZpZ25lc2hfa3VtYXJfY2JhMjAyMHNAY2JhLmlzYi5lZHU" class="w3-light-grey">Events</a>
-
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-grey">w3.css</a></p>
 </footer>
  
-
-
-</body>
 </html>
